# ocaml-vs-rust-hft

./: .dockerignore  .gitignore  README.md
.github/workflows/: ci.yml  ec2-bench.yml  publish-image.yml
bench/: analyze.py
bench/gen_workload/: Cargo.toml
bench/gen_workload/src/: main.rs
bench/results/: summary.md
deploy/ec2/: README.md  bench.sh  run.sh  tune.sh  userdata.sh
docker/: Dockerfile  README.md
docs/expressiveness/: README.md  iceberg_refactor.ml  iceberg_refactor.rs  illegal_fail.ml  order_status.ml  order_status.rs
docs/plans/: 2026-05-28-ocaml-vs-rust-hft-design.md  2026-05-28-ocaml-vs-rust-hft-implementation.md
ocaml/idiomatic/lib/: lob.ml
ocaml/idiomatic/test/: dune  test_book.ml
ocaml/oxcaml/lib/: dune  lob.ml
ocaml/oxcaml/test/: test_book.ml
rust/: Cargo.toml
rust/src/: book.rs  lib.rs  wire.rs
rust/tests/: properties.rs
scripts/: run_all.sh
spec/: golden.txt  protocol.md
